--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ th {
     background-color: rgba(255, 228, 196, 0.13);
 }
 
-.addData {
+/* .addData {
     width: 400px;
     height: 100vh;
     padding-top: 20px;
@@ -74,4 +74,4 @@ th {
 
 .close {
     right: -999px;
-}
+} */
