--- a/src/workinfo.css
+++ b/src/workinfo.css
@@ -22,9 +22,23 @@ table {
   tr button {
     width: 80px;
     height: 34.88px;
+    font-weight: 700;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+    color: #1164e0;
   }
 
   .plusTr {
-    width: 80px;
-    height: 35px;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    font-size: 32px;
+    border: 2px solid #1164e0;
+    position: fixed;
+    bottom: 100px;
+    right: 50px;
+    cursor: pointer;
+    color: #1164e0;
+    background: transparent;
+    z-index: 1;
   }
