--- a/src/datagrid.css
+++ b/src/datagrid.css
@@ -12,9 +12,8 @@ body {
 
 .container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 20px;
-    overflow: hidden;
     background: rgb(0, 0, 0);
     background: linear-gradient(329deg, rgba(0, 0, 0, 1) 16%, rgba(15, 34, 61, 1) 42%, rgba(17, 17, 54, 1) 90%);
 }
